@startuml
skinparam classAttributeIconSize 0

class "Program" as PresentationLayer {
    - _service: InheemseSoortRepository
    - _gebruikerMaaktValideKeuze: bool   
}

class InheemseSoort {
    + Naam: string
    + LocatieNaam: string
    + Longitude: Decimal
    + Latitude: Decimal
    + Datum: DateTime      
}

class InheemseSoortService {
    - _repository: InheemseSoortRepository
    + RegistreerInheemseSoort(string naam, string locatieNaam, Decimal longitude, Decimal latitude, DateTime datum)
    + List<InheemseSoort> HaalAlleInheemseSoortenOp()       
}

class InheemseSoortRepository {
    + VoegInheemseSoortToe(InheemseSoort soort)
    + List<InheemseSoort> HaalAlleInheemseSoortenOp()       
}

PresentationLayer --> InheemseSoortService: directe koppeling
PresentationLayer --> InheemseSoort: directe koppeling
InheemseSoortService --> InheemseSoort: directe koppeling
InheemseSoortService --> InheemseSoortRepository: directe koppeling
InheemseSoortRepository --> InheemseSoort: directe koppeling
@enduml
